--- a/src/components/Meals/Meals.css
+++ b/src/components/Meals/Meals.css
@@ -9,12 +9,31 @@
 }
 .meal-item {
   padding: 5px 35px;
-  gap: 2px;
 }
 .meal-item-desc {
   font-style: italic;
 }
 .meal-item-price {
   color: brown;
+  font-weight: bold;
+}
+.meal-item-amount {
+  position: absolute;
+  margin-left: 700px;
+  margin-top: -120px;
+  font-weight: bold;
+}
+.form-input {
+  max-width: 40px;
+}
+.add-btn {
+  background-color: brown;
+  color: white;
+  width: 90px;
+  height: 25px;
+  margin-left: 10px;
+  border: none;
+  border-radius: 10px 10px;
+  margin-top: 10px;
   font-weight: bold;
 }
