--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,9 @@
   margin-left: 50%;
   position: absolute;
 }
+.cart-btn :hover {
+  cursor: pointer;
+}
 .cart-amt {
   padding: 5px;
   margin: 10px;
