--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -22,7 +22,7 @@
   margin-top: -45px;
   margin-left: 300px;
 }
-.cart2 .btn {
+.cart button {
   background-color: white;
   border-radius: 10px;
   margin-left: 9px;
@@ -30,4 +30,7 @@
   width: 50px;
   border-color: brown;
   color: brown;
+}
+.cart button:hover {
+  cursor: pointer;
 }
